--- a/css/style.css
+++ b/css/style.css
@@ -712,7 +712,8 @@ body::after {
   padding: 2.5rem 0.3125rem;
 }
 
-.popup--order-confirmation .popup__content {
+.popup--order-confirmation .popup__content,
+.popup--selection-confirmation .popup__content {
   max-width: 50rem;
   padding: 6.25rem 1.25rem;
 }
@@ -720,6 +721,11 @@ body::after {
 .popup--popup-selection .popup__content {
   max-width: 68.75rem;
   padding: 3.125rem 1.25rem;
+}
+
+.popup--footer .popup__content {
+  max-width: 68.75rem;
+  padding: 5rem 8.75rem;
 }
 
 .popup--cart-empty .content-cart-empty {
@@ -1352,6 +1358,119 @@ body::after {
   color: #A6A6A6;
 }
 
+.popup--selection-confirmation .selection-confirmation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.popup--selection-confirmation .selection-confirmation__title {
+  margin-bottom: 1.25rem;
+  text-align: center;
+}
+
+.popup--selection-confirmation .selection-confirmation p {
+  text-align: center;
+  margin-bottom: 0.3125rem;
+}
+
+.popup--selection-confirmation .selection-confirmation__button {
+  margin-top: 6.25rem;
+}
+
+.popup--footer .popup__close {
+  position: absolute;
+  width: 2.375rem;
+  height: 2.375rem;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 2.375rem;
+          flex: 0 0 2.375rem;
+  font-size: 1.25rem;
+  color: #A6A6A6;
+  top: 0;
+  right: 0;
+  -webkit-transition: color 0.3s ease 0s;
+  -o-transition: color 0.3s ease 0s;
+  transition: color 0.3s ease 0s;
+}
+
+.popup--footer .popup-footer__title {
+  font-weight: 700;
+  font-size: 1.5rem;
+  line-height: 1.2083333333;
+  color: #1F1F1F;
+  margin-bottom: 1.25rem;
+  text-align: center;
+}
+
+.popup--footer .popup-footer__text-block:not(:last-child) {
+  margin-bottom: 1.875rem;
+}
+
+.popup--footer .text-block {
+  text-align: justify;
+}
+
+.popup--footer .text-block__title {
+  font-weight: 700;
+  color: #1F1F1F;
+}
+
+.popup--footer .text-block__title:not(:last-child) {
+  margin-bottom: 1.25rem;
+}
+
+.popup--footer .text-block__list,
+.popup--footer .text-block p {
+  color: #626262;
+}
+
+.popup--footer .text-block__list:not(:last-child),
+.popup--footer .text-block p:not(:last-child) {
+  margin-bottom: 0.9375rem;
+}
+
+.popup--footer .text-block__marker-list {
+  color: #626262;
+}
+
+.popup--footer .text-block__marker-list li {
+  position: relative;
+  padding-left: 0.9375rem;
+}
+
+.popup--footer .text-block__marker-list li::before {
+  content: "";
+  position: absolute;
+  top: 0.46875rem;
+  left: 0;
+  width: 0.375rem;
+  height: 0.375rem;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 0.375rem;
+          flex: 0 0 0.375rem;
+  background-color: #626262;
+  border-radius: 50%;
+}
+
+.popup--footer .text-block__marker-list {
+  padding-left: 1.5625rem;
+}
+
+.popup--footer .text-block__marker-list:not(:last-child) {
+  margin-bottom: 0.9375rem;
+}
+
 .spollers {
   display: -ms-grid;
   display: grid;
@@ -1767,6 +1886,49 @@ body::after {
 
 .button-up:active {
   background-color: #1E65B8;
+}
+
+.breadcrumbs {
+  padding-top: 9.625rem;
+  padding-bottom: 1.25rem;
+}
+
+.breadcrumbs__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  white-space: nowrap;
+  overflow: auto;
+  gap: 1.5625rem;
+}
+
+.breadcrumbs__item {
+  position: relative;
+}
+
+.breadcrumbs__item:not(:last-child)::after {
+  content: "";
+  position: absolute;
+  width: 0.625rem;
+  height: 0.625rem;
+  top: 0.4375rem;
+  right: -0.9375rem;
+  border-top: 0.125rem solid #626262;
+  border-right: 0.125rem solid #626262;
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.breadcrumbs__link {
+  color: #626262;
+}
+
+.breadcrumbs__current {
+  color: #2E7FDE;
 }
 
 .header {
@@ -2773,6 +2935,45 @@ body::after {
   max-width: 100%;
 }
 
+.us-about__title {
+  margin-bottom: 1.25rem;
+}
+
+.us-about__image {
+  position: relative;
+}
+
+.us-about__image:not(:last-child) {
+  margin-bottom: 2.5rem;
+}
+
+.us-about__item img {
+  width: 100%;
+}
+
+.us-about__waterlogo {
+  position: absolute;
+  z-index: 2;
+  width: 25.520833%;
+  /* 490/1920 */
+  right: 4.761905%;
+  /* 80/1680 */
+  bottom: 7.5%;
+  /* 60/800 */
+}
+
+.us-about__waterlogo img {
+  width: 100%;
+}
+
+.us-about__text {
+  color: #1F1F1F;
+}
+
+.us-about__text p:not(:last-child) {
+  margin-bottom: 1.25rem;
+}
+
 .swiper {
   overflow: hidden;
 }
@@ -3008,6 +3209,22 @@ body::after {
     font-size: 1rem;
   }
 
+  .popup--footer .popup__content {
+    padding-top: 5rem;
+  }
+
+  .popup--footer .popup__content {
+    padding-bottom: 5rem;
+  }
+
+  .popup--footer .popup__content {
+    padding-left: 8.75rem;
+  }
+
+  .popup--footer .popup__content {
+    padding-right: 8.75rem;
+  }
+
   .popup--popup-selection .line-upload__file-upload {
     padding-top: 1.125rem;
   }
@@ -3022,6 +3239,15 @@ body::after {
 
   .popup--popup-selection .line-upload__file-upload {
     padding-right: 2rem;
+  }
+
+  .popup--footer .text-block__list,
+  .popup--footer .text-block p {
+    font-size: 1.125rem;
+  }
+
+  .popup--footer .text-block__marker-list {
+    font-size: 1.125rem;
   }
 
   .product-card {
@@ -3237,6 +3463,14 @@ body::after {
   .body-response__comment {
     padding-left: 1.25rem;
   }
+
+  .us-about__text {
+    margin-left: 44.375rem;
+  }
+
+  .us-about__text {
+    font-size: 1.125rem;
+  }
 }
 
 @media (min-width: 30em) {
@@ -3272,6 +3506,10 @@ body::after {
 
   .main__block {
     width: 53.75rem;
+  }
+
+  .us-about__waterlogo {
+    width: 30.625rem;
   }
 }
 
@@ -3350,6 +3588,10 @@ body::after {
   .top-header__action {
     gap: 1.875rem;
   }
+
+  .us-about__waterlogo {
+    width: 14.375rem;
+  }
 }
 
 @media (max-width: 25em) {
@@ -3413,6 +3655,22 @@ body::after {
     font-size: 0.75rem;
   }
 
+  .popup--footer .popup__content {
+    padding-top: 1.875rem;
+  }
+
+  .popup--footer .popup__content {
+    padding-bottom: 1.875rem;
+  }
+
+  .popup--footer .popup__content {
+    padding-left: 1.875rem;
+  }
+
+  .popup--footer .popup__content {
+    padding-right: 1.875rem;
+  }
+
   .popup--popup-selection .line-upload__file-upload {
     padding-top: 0.625rem;
   }
@@ -3430,6 +3688,15 @@ body::after {
   }
 
   .popup--popup-selection .line-upload__file-upload {
+    font-size: 0.875rem;
+  }
+
+  .popup--footer .text-block__list,
+  .popup--footer .text-block p {
+    font-size: 0.875rem;
+  }
+
+  .popup--footer .text-block__marker-list {
     font-size: 0.875rem;
   }
 
@@ -3650,6 +3917,14 @@ body::after {
   .body-response__comment {
     padding-left: 0.3125rem;
   }
+
+  .us-about__text {
+    margin-left: 0.0000000625rem;
+  }
+
+  .us-about__text {
+    font-size: 0.875rem;
+  }
 }
 
 @media (max-width: 89.98625em) {
@@ -3669,6 +3944,10 @@ body::after {
   .button-up {
     width: 3.75rem;
     height: 3.75rem;
+  }
+
+  .breadcrumbs {
+    padding-top: 5.625rem;
   }
 
   .top-header__logo {
@@ -4120,6 +4399,54 @@ body::after {
     }
 }
 
+@supports (padding-top: clamp( 1.875rem , 1.1707746479rem  +  3.5211267606vw , 5rem )) {
+    .popup--footer .popup__content {
+      padding-top: clamp( 1.875rem , 1.1707746479rem  +  3.5211267606vw , 5rem );
+    }
+}
+
+@supports not (padding-top: clamp( 1.875rem , 1.1707746479rem  +  3.5211267606vw , 5rem )) {
+    .popup--footer .popup__content {
+      padding-top: calc(1.875rem + 3.125 * (100vw - 20rem) / 88.75);
+    }
+}
+
+@supports (padding-bottom: clamp( 1.875rem , 1.1707746479rem  +  3.5211267606vw , 5rem )) {
+    .popup--footer .popup__content {
+      padding-bottom: clamp( 1.875rem , 1.1707746479rem  +  3.5211267606vw , 5rem );
+    }
+}
+
+@supports not (padding-bottom: clamp( 1.875rem , 1.1707746479rem  +  3.5211267606vw , 5rem )) {
+    .popup--footer .popup__content {
+      padding-bottom: calc(1.875rem + 3.125 * (100vw - 20rem) / 88.75);
+    }
+}
+
+@supports (padding-left: clamp( 1.875rem , 0.3257042254rem  +  7.7464788732vw , 8.75rem )) {
+    .popup--footer .popup__content {
+      padding-left: clamp( 1.875rem , 0.3257042254rem  +  7.7464788732vw , 8.75rem );
+    }
+}
+
+@supports not (padding-left: clamp( 1.875rem , 0.3257042254rem  +  7.7464788732vw , 8.75rem )) {
+    .popup--footer .popup__content {
+      padding-left: calc(1.875rem + 6.875 * (100vw - 20rem) / 88.75);
+    }
+}
+
+@supports (padding-right: clamp( 1.875rem , 0.3257042254rem  +  7.7464788732vw , 8.75rem )) {
+    .popup--footer .popup__content {
+      padding-right: clamp( 1.875rem , 0.3257042254rem  +  7.7464788732vw , 8.75rem );
+    }
+}
+
+@supports not (padding-right: clamp( 1.875rem , 0.3257042254rem  +  7.7464788732vw , 8.75rem )) {
+    .popup--footer .popup__content {
+      padding-right: calc(1.875rem + 6.875 * (100vw - 20rem) / 88.75);
+    }
+}
+
 @supports (padding-top: clamp( 0.625rem , 0.5123239437rem  +  0.5633802817vw , 1.125rem )) {
     .popup--popup-selection .line-upload__file-upload {
       padding-top: clamp( 0.625rem , 0.5123239437rem  +  0.5633802817vw , 1.125rem );
@@ -4165,6 +4492,32 @@ body::after {
 @supports not (padding-right: clamp( 0.9375rem , 0.6980633803rem  +  1.1971830986vw , 2rem )) {
     .popup--popup-selection .line-upload__file-upload {
       padding-right: calc(0.9375rem + 1.0625 * (100vw - 20rem) / 88.75);
+    }
+}
+
+@supports (font-size: clamp( 0.875rem , 0.8186619718rem  +  0.2816901408vw , 1.125rem )) {
+    .popup--footer .text-block__list,
+    .popup--footer .text-block p {
+      font-size: clamp( 0.875rem , 0.8186619718rem  +  0.2816901408vw , 1.125rem );
+    }
+}
+
+@supports not (font-size: clamp( 0.875rem , 0.8186619718rem  +  0.2816901408vw , 1.125rem )) {
+    .popup--footer .text-block__list,
+    .popup--footer .text-block p {
+      font-size: calc(0.875rem + 0.25 * (100vw - 20rem) / 88.75);
+    }
+}
+
+@supports (font-size: clamp( 0.875rem , 0.8186619718rem  +  0.2816901408vw , 1.125rem )) {
+    .popup--footer .text-block__marker-list {
+      font-size: clamp( 0.875rem , 0.8186619718rem  +  0.2816901408vw , 1.125rem );
+    }
+}
+
+@supports not (font-size: clamp( 0.875rem , 0.8186619718rem  +  0.2816901408vw , 1.125rem )) {
+    .popup--footer .text-block__marker-list {
+      font-size: calc(0.875rem + 0.25 * (100vw - 20rem) / 88.75);
     }
 }
 
@@ -4807,6 +5160,30 @@ body::after {
       padding-left: calc(0.3125rem + 0.9375 * (100vw - 20rem) / 88.75);
     }
 }
+
+@supports (margin-left: clamp( 0.0000000625rem , -9.9999999234rem  +  49.9999999296vw , 44.375rem )) {
+    .us-about__text {
+      margin-left: clamp( 0.0000000625rem , -9.9999999234rem  +  49.9999999296vw , 44.375rem );
+    }
+}
+
+@supports not (margin-left: clamp( 0.0000000625rem , -9.9999999234rem  +  49.9999999296vw , 44.375rem )) {
+    .us-about__text {
+      margin-left: calc(0.0000000625rem + 44.3749999375 * (100vw - 20rem) / 88.75);
+    }
+}
+
+@supports (font-size: clamp( 0.875rem , 0.8186619718rem  +  0.2816901408vw , 1.125rem )) {
+    .us-about__text {
+      font-size: clamp( 0.875rem , 0.8186619718rem  +  0.2816901408vw , 1.125rem );
+    }
+}
+
+@supports not (font-size: clamp( 0.875rem , 0.8186619718rem  +  0.2816901408vw , 1.125rem )) {
+    .us-about__text {
+      font-size: calc(0.875rem + 0.25 * (100vw - 20rem) / 88.75);
+    }
+}
 }
 
 @media (min-width: 20em) and (max-width: 26.5625em) {
@@ -4947,6 +5324,18 @@ body::after {
       gap: calc(1.875rem + 3.0625 * (100vw - 48rem) / 72);
     }
 }
+
+@supports (width: clamp( 14.375rem , 3.5416666667rem  +  22.5694444444vw , 30.625rem )) {
+    .us-about__waterlogo {
+      width: clamp( 14.375rem , 3.5416666667rem  +  22.5694444444vw , 30.625rem );
+    }
+}
+
+@supports not (width: clamp( 14.375rem , 3.5416666667rem  +  22.5694444444vw , 30.625rem )) {
+    .us-about__waterlogo {
+      width: calc(14.375rem + 16.25 * (100vw - 48rem) / 72);
+    }
+}
 }
 
 @media (min-width: 20em) and (max-width: 48em) {
@@ -5049,6 +5438,10 @@ body::after {
 
   .popup--popup-selection .line-upload__file-upload:hover {
     background-color: #DBDBDB;
+  }
+
+  .popup--footer .popup__close:hover {
+    color: #DE4444;
   }
 
   .product-card:hover {
